--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/react-csv/react-csv.git"
+    "url": "git+https://github.com/pr301/react-csv.git"
   },
   "keywords": [
     "csv",
@@ -39,9 +39,9 @@
   "author": "Abdennour TOUMI <http://abdennoor.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/react-csv/react-csv/issues"
+    "url": "https://github.com/pr301/react-csv/pulls"
   },
-  "homepage": "https://github.com/react-csv/react-csv#readme",
+  "homepage": "https://github.com/pr301/react-csv#readme",
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.18.2",
